Add costs for traversing an elevator of unknown accessibility